--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 Flask==3.1.0
 flask-cors==5.0.1
 matplotlib==3.9.2
@@ -8,3 +7,4 @@ scikit-learn==1.5.2
 scipy==1.14.1
 numpy==2.1.1
 pandas==2.2.3
+cryptography==41.0.7
